<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ALEBirthdayReminders2</string>
    <string name="person_name_label">Name</string>
    <string name="person_name_hint">Enter name</string>
    <string name="person_birth_date_label">Birthday</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notify_testing">NotifyTestingActivity</string>
    <string name="person_save">Save</string>
    <string name="list_add_person_text">New(…,&#8230;)</string>
    <string name="person_take_photo">Take photo</string>
    <string name="person_change_birth_date">Change</string>
    <string name="person_photo">Photo of a person</string>
    
</resources>
