<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_person_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alebirthdayreminders2.EditPerson$PlaceholderFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_name_label" />

    <EditText
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/person_name_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_birth_date_label" />

    <TextView
        android:id="@+id/person_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/person_change_date_button" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_change_birth_date" />
        />

    <!-- Change to ImageView. Add OnClick for changes -->

    <Button
        android:id="@+id/person_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_take_photo" />

    <!-- TODO(eyalma): Move to action bar. -->

    <Button
        android:id="@+id/person_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_save" />

</LinearLayout>